# round-based

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS
.github/workflows/: rust.yml
examples/random-generation-protocol/: Cargo.toml
examples/random-generation-protocol/src/: lib.rs
round-based/: CHANGELOG.md  Cargo.toml
round-based-derive/: CHANGELOG.md  Cargo.toml
round-based-tests/: Cargo.toml
round-based-tests/tests/: rounds.rs
round-based/src/: _docs.rs  delivery.rs  lib.rs  party.rs  runtime.rs
round-based/src/rounds_router/: mod.rs  simple_store.rs  store.rs
round-based/src/simulation/: mod.rs  sim_async.rs  sim_sync.rs
round-based/src/state_machine/: delivery.rs  mod.rs  noop_waker.rs  runtime.rs  shared_state.rs
wasm/no_std/: Cargo.toml
wasm/no_std/src/: lib.rs
