[package]
name = "round-based-tests"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
hex-literal = "0.3"
futures = "0.3"
matches = "0.1"

rand_dev = "0.1"

round-based = { path = "../round-based" }
random-generation-protocol = { path = "../examples/random-generation-protocol" }
