[package]
name = "round-based"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Driver for MPC protocols"
repository = "https://github.com/dfns/round-based"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
phantom-type = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }
thiserror = { version = "1", optional = true }
displaydoc = { version = "0.2", default-features = false }

round-based-derive = { version = "0.2", optional = true, path = "../round-based-derive" }

tokio = { version = "1", features = ["rt"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

[dev-dependencies]
trybuild = "1"
matches = "0.1"
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros"] }

[features]
default = ["std"]
state-machine = []
dev = ["std", "tokio/sync", "tokio-stream"]
derive = ["round-based-derive"]
runtime-tokio = ["tokio"]
std = ["thiserror"]

[[test]]
name = "derive"
required-features = ["derive"]
