[package]
name = "wasm_nostd_compiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-generation-protocol = { path = "../../examples/random-generation-protocol" }
round-based = { path = "../../round-based", default-features = false, features = ["state-machine", "derive"] }
